# terminalq

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
commands/: allocation.md  audit.md  chart.md  compare.md  crypto.md  dividends.md  earnings.md  economy.md  events.md  filings.md  financials.md  forex.md  historical.md  ingest.md  news.md  portfolio.md  quote.md  ratings.md  risk.md  rsu.md  screen.md  search.md  setup.md  technicals.md  tq-allocation.md  tq-audit.md  tq-chart.md  tq-compare.md  tq-crypto.md  tq-dividends.md  tq-earnings.md  tq-economy.md  tq-events.md  tq-filings.md  tq-financials.md  tq-forex.md  tq-historical.md  tq-ingest.md  tq-news.md  tq-portfolio.md  (+14 more)
docs/: api-reference.md  commands.md  configuration.md  output-contracts.md  providers.md
hooks/: discover-components.sh  hooks.json  session-check.sh  stop-quality-gate.sh
reference/: accounts.example.md  etf-classifications.example.md  portfolio-holdings.example.md  rsu-schedule.example.md  watchlist.example.md
skills/company-research/: SKILL.md
skills/earnings-preview/: SKILL.md
skills/economic-outlook/: SKILL.md
skills/market-overview/: SKILL.md
skills/portfolio-health/: SKILL.md
skills/trade-research/: SKILL.md
tests/: conftest.py  test_audit.py  test_cache.py  test_edgar.py  test_finnhub.py  test_fred.py  test_historical.py  test_polygon.py  test_portfolio.py  test_rate_limiter.py  test_screener.py  test_search.py  test_technical.py  test_usage_tracker.py
(+25 files in other folders)
